My first commit

--- a/Sarin_CSE.html
+++ b/Sarin_CSE.html
@@ -46,7 +46,10 @@
                      <img src="images/gtgimg.png" width=300 height=300 alt="Image of game cannot be pictured... refer to documentation(linked in paragraph) for other pictures">
                  </div>
              </div>
-             
+             <div class="row proj3">
+                 <h3>Text Adventure Project</h3>
+                 <p>Jan 12, 2018 - Jan 19, 2018</p>
+                 <p class="col-sm-6"><b>Description:</b> The main objective of this project was to demonstrate our knowledge on how to use python loops to create a story game. Prior to and during the project, I learned how to create python loops and make a responsive story telling adventure game. My specific role in the project was to help with mapping out the story and creating the code in Cloud 9. Our story was a jungle adventure where the main character is on a quest to find a hidden treasure and has to go through obstacles in the jungle to fulfill the quest. The biggest challenge was that we were having trouble figuring out a way to make the raw input function properly. My partner and I exemplified many teamwork skills, as we were able to easily collaborate and help each other. I demonstrated leadership skills, as I made sure to delegate tasks and to keep on top of things so we were reaching our goals each day, in terms of progress on the project. </div>
         </div>
     </body>
     <footer class="main">
